@@ -29,6 +29,8 @@ Changes in stable release 2.4.16 (not released yet)
 
 * Fixed a bug with aspect pixmaps in colorsets.
 
+* Iconified windows without an icon do not receive focus.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.15 (24-Jan-2003)
